--- a/aruco/CMakeLists.txt
+++ b/aruco/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(maruco)
+project(aruco)
 
 #Enable C++ 11
 add_compile_options(-std=c++11)
@@ -16,15 +16,15 @@ generate_messages(DEPENDENCIES std_msgs)
 catkin_package(CATKIN_DEPENDS message_runtime roscpp std_msgs)
 
 #Aruco ROS node
-add_executable(maruco src/ros/ArucoNode.cpp)
-add_dependencies(maruco aruco_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
-target_link_libraries(maruco ${catkin_LIBRARIES} ${OpenCV_LIBS})
+add_executable(aruco src/ros/ArucoNode.cpp)
+add_dependencies(aruco aruco_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
+target_link_libraries(aruco ${catkin_LIBRARIES} ${OpenCV_LIBS})
 
 #Include directories
 include_directories(include ${catkin_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
 
 #Install
-install(TARGETS maruco
+install(TARGETS aruco
 	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
